--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,5 @@
-MONGO_URL=mongodb+srv://saniyakhan7019:e05w2fVZvb1Q6J5B@cluster0.xjytfiz.mongodb.net/
+# MONGO_URL=mongodb+srv://saniyakhan7019:e05w2fVZvb1Q6J5B@cluster0.xjytfiz.mongodb.net/
+ MONGO_URL=mongodb+srv://saniyakhan7019:XyQ4ixjClLTqVgXy@cluster0.xjytfiz.mongodb.net/
 JWT_SECRET=aa8e8a8ee65ee422fb6b59f7d43238ec
 IMAGEKIT_PUBLICKEY=public_CyPb3MsgDSKAreeByBJ+XHDMcnk=
 IMAGEKIT_PRIVATEKEY=private_Bkk+KKH/5kaZXkuBeB2I6cjbr2Q=
