--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,7 @@
 # MONGO_URL=mongodb+srv://saniyakhan7019:e05w2fVZvb1Q6J5B@cluster0.xjytfiz.mongodb.net/
- MONGO_URL=mongodb+srv://saniyakhan7019:XyQ4ixjClLTqVgXy@cluster0.xjytfiz.mongodb.net/
+ MONGO_URL=mongodb+srv://saniyakhan7019:gqwhOPTV9f6B9aM4@cluster0.xjytfiz.mongodb.net/
 JWT_SECRET=aa8e8a8ee65ee422fb6b59f7d43238ec
 IMAGEKIT_PUBLICKEY=public_CyPb3MsgDSKAreeByBJ+XHDMcnk=
 IMAGEKIT_PRIVATEKEY=private_Bkk+KKH/5kaZXkuBeB2I6cjbr2Q=
-URL_ENDPOINT=https://ik.imagekit.io/olq4l3lt1
+URL_ENDPOINT=https://ik.imagekit.io/olq4l3lt1  
+
